--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,66 @@ p {
 }
 img {
     width: 250px;
-    text-align: center;
-    border: 10px solid #ffffff;
+    display: block;
+    margin: 0 auto;
+    border: 10px dashed #ffffff;
+}
+div {
+    min-height: 125px;
+    padding: 20px;
+    border: 3px solid #ffffff;
+}
+.introduction {
+    border-radius: 15px;
+    margin-top: 15px;
+    line-height: 2;
+}
+.red {
+    background-color: #ff0000;
+    text-align: right;
+    margin-left: 50px;
+    border-bottom: 2px solid;
+    border-left: 5px solid;
+}
+.blue {
+    background-color: #0000FF;
+    text-align: left;
+    margin-right: 50px;
+    border-right: 5px solid;
+    border-top: 2px solid;
+}
+.blue h2 {
+    color: #C4C4C4;
+}
+.blue p {
+    color: #C4C4C4;
+}
+.yellow {
+    background-color: #FFFF00;
+    text-align: right;
+    margin-left: 50px;
+    border-bottom: 2px solid;
+    border-left: 5px solid;
+} 
+.yellow p {
+    color: #707070;
+}
+.green {
+    background-color: #00EB00;
+    text-align: left;
+    margin-right: 50px;
+    border-right: 5px solid;
+    border-top: 2px solid;
+}
+footer {
+    background: rgb(0,0,0);
+    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,255,1) 25%, rgba(0,102,255,1) 70%, rgba(0,0,0,1) 100%);
+    border: 5px solid #ffffff;
+}
+footer p {
+    text-align: right;
+    font-size: 20px;
+    padding-top: 15px;
+    padding-right: 15px;
+    padding-bottom: 15px;
 }
