--- a/style.css
+++ b/style.css
@@ -42,6 +42,8 @@ div {
     margin-left: 50px;
     border-bottom: 2px solid #ffffff;
     border-left: 5px solid #ffffff;
+    border-top: 3px;
+    border-right: 3px;
 }
 .blue {
     background-color: #0000FF;
@@ -64,7 +66,7 @@ div {
     margin-left: 50px;
     border-bottom: 2px solid #ffffff;
     border-left: 5px solid #ffffff;
-    border-left: 3px;
+    border-right: 3px;
     border-bottom: 3px;
 } 
 .yellow p {
@@ -90,5 +92,5 @@ footer p {
     padding-top: 15px;
     padding-right: 15px;
     padding-bottom: 15px;
-    padding-left: 0px;
+    padding-left: 0;
 }
