--- a/css/style.css
+++ b/css/style.css
@@ -1,20 +1,21 @@
 body {
     font-family: Arial, Verdana;
-    background: #000000;
-    color: #ffffff;
+    Background: #000000;
+    color: #FFFFFF;
     margin-top: 20px;
     margin-left: 20px;
     margin-right: 20px;
+    margin-bottom: 0px;
 }
 h1 {
-    padding: 15px;
-    text-align: center;
     font-size: 42px;
+    text-align: center;
+    padding: 15px;
 }
 h2 {
-    color: #0D0D0D;
     font-size: 30px;
-} 
+    color: #0D0D0D;
+}
 p {
     font-size: 24px;
     padding-left: 10px;
@@ -24,12 +25,12 @@ img {
     width: 250px;
     display: block;
     margin: 0 auto;
-    border: 10px dashed #ffffff;
+    border: 10px dashed #FFFFFF;
 }
 div {
     min-height: 125px;
     padding: 20px;
-    border: 3px solid #ffffff;
+    border: 3px solid #FFFFFF;
 }
 .introduction {
     border-radius: 15px;
@@ -37,51 +38,56 @@ div {
     line-height: 2;
 }
 .red {
-    background-color: #ff0000;
+    background-color: #FF0000;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px solid;
-    border-left: 5px solid;
+    border-bottom: 2px solid #FFFFFF;
+    border-left: 5px solid #FFFFFF;
+    border-top: 0px;
+    border-right: 0px;
 }
 .blue {
     background-color: #0000FF;
     text-align: left;
     margin-right: 50px;
-    border-right: 5px solid;
-    border-top: 2px solid;
+    border-right: 5px solid #FFFFFF;
+    border-top: 2px solid #FFFFFF;
+    border-left: 0px;
+    border-bottom: 0px;
 }
-.blue h2 {
-    color: #C4C4C4;
-}
-.blue p {
+.blue h2, .blue p {
     color: #C4C4C4;
 }
 .yellow {
     background-color: #FFFF00;
     text-align: right;
     margin-left: 50px;
-    border-bottom: 2px solid;
-    border-left: 5px solid;
-} 
+    border-bottom: 2px solid #FFFFFF;
+    border-left: 5px solid #FFFFFF;
+    border-top: 0px;
+    border-right: 0px;
+}
 .yellow p {
     color: #707070;
 }
 .green {
-    background-color: #00EB00;
+    background-color: #008500;
     text-align: left;
     margin-right: 50px;
-    border-right: 5px solid;
-    border-top: 2px solid;
+    border-right: 5px solid #FFFFFF;
+    border-top: 2px solid #FFFFFF;
+    border-left: 0px;
+    border-bottom: 0px;
 }
 footer {
-    background: rgb(0,0,0);
-    background: linear-gradient(90deg, rgba(0,0,0,1) 0%, rgba(0,0,255,1) 25%, rgba(0,102,255,1) 70%, rgba(0,0,0,1) 100%);
-    border: 5px solid #ffffff;
+    background-image: linear-gradient(to right, #000000, #0000ff 25%, #0066ff 70%, #000000);
+    border: solid 5px #FFFFFF
 }
 footer p {
-    text-align: right;
-    font-size: 20px;
-    padding-top: 15px;
-    padding-right: 15px;
-    padding-bottom: 15px;
-}
+    font-size: 20px;         
+    text-align: right;      
+    padding-top: 15px;      
+    padding-right: 15px;     
+    padding-bottom: 15px;    
+    padding-left: 0;         
+  }
